Feat: Add patch method to transactions api, minor ui improvements

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -94,8 +94,8 @@
                              data-ishappy="@transaction.IsHappy"
                              data-isnecessary="@transaction.IsNecessary"
                              data-evaluated="@transaction.Evaluated"
-                             data-evaluatedishappy="@transaction.EvaluatedIsHappy"
-                             data-evaluatedisnecessary="@transaction.EvaluatedIsNecessary">
+                             data-evaluatedishappy="@transaction.PreviousIsHappy"
+                             data-evaluatedisnecessary="@transaction.PreviousIsNecessary">
 
                             <div class="border-container">
                                 <div class="content">
