--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
@@ -10,7 +10,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="add-category-form" asp-controller="Categories" asp-action="PostCategory" method="POST">
-                        <input type="hidden"asp-for="GroupId" value="" />
+                        <input type="hidden"asp-for="GroupId" value=""/>
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" />
@@ -30,25 +30,25 @@
         </div>
     </div>
 
-    <div class="modal fade" id="update-category-modal" tabindex="-1" aria-labelledby="update-category-label" aria-hidden="true">
+    <div class="modal fade" id="updateCategory-modal" tabindex="-1" aria-labelledby="updateCategory-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="update-category-label"></h5>
+                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="updateCategory-label"></h5>
                     <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="update-category-form" asp-controller="Categories" asp-action="PutCategory" method="PUT">
-                        <input type="hidden" asp-for="GroupId" value="" />
-                        <input type="hidden" asp-for="Id" value="" />
+                        <input type="hidden" asp-for="GroupId" value="" id="updateCategory_groupId" />
+                        <input type="hidden" asp-for="Id" value="" id="updateCategory_id"/>
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
-                            <input asp-for="Name" class="form-control" />
+                            <input asp-for="Name" class="form-control" id="updateCategory_name"/>
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Budget" class="control-label"></label>
-                            <input asp-for="Budget" class="form-control" />
+                            <input asp-for="Budget" class="form-control" id="updateCategory_budget" />
                             <span asp-validation-for="Budget" class="text-danger"></span>
                         </div>
                         <div class="form-group mt-2 d-flex align-items-center justify-content-center">
