--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -11964,10 +11964,11 @@ body {
 }
 
 .sidebar-container {
-  margin: 1rem 0 0 0;
+  margin: 70px 0 0 0;
   width: 200px;
   opacity: 1;
   transition: width ease 0.5s, opacity ease-in 0.5s;
+  z-index: 11;
 }
 
 .sidebar-caret {
@@ -11996,23 +11997,36 @@ body {
   left: 0px;
   top: 50%;
   z-index: 500;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
 }
 
-/*
-#reevaluation-button-container {
-    width: 50px;
-    transition: width ease-in-out 0.5s;
-}
-
-#reevaluation-button-container:hover {    
-    width: 300px;
+.sidebar-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
 
 #reevaluation-button {
-    margin: auto;
-    display: block;    
+  width: 45px;
+  height: 45px;
 }
-*/
+
+#statistics-button {
+  width: 45px;
+  height: 45px;
+}
+
+#wf-button {
+  width: 45px;
+  height: 50px;
+}
+
 #menu-container {
   position: absolute;
   visibility: hidden;
@@ -12092,29 +12106,42 @@ body {
   padding-right: 0;
   padding-left: 25px;
   height: 100vh;
+  width: 100vw;
+}
+
+main {
+  width: 100%;
+  height: 100%;
 }
 
 .flip-container {
   background-color: transparent;
-  perspective: 1000px;
   margin-top: 10px;
+  height: 100%;
+  width: 100%;
 }
 
 .flip-container-inner {
   position: relative;
+  height: 100%;
+  width: 100%;
   transition: transform 1s;
   transform-style: preserve-3d;
 }
 
 .flip-content {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   height: calc(100vh - 67px);
+  width: 100%;
+  transform: rotateY(calc(90deg * var(--s))) translateZ(50cqw);
 }
 
 .flip-scroll-container {
-  height: 100%;
+  height: calc(100% - 10px);
   overflow-y: scroll;
 }
 
@@ -12123,27 +12150,27 @@ body {
   margin-right: 20px;
 }
 
-.flip-content-back {
-  position: absolute;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  top: 0;
-  left: 0;
-  height: calc(100vh - 67px);
-  width: 100%;
-  transform: rotateY(180deg);
-}
-
-.flip {
-  transform: rotateY(180deg);
-}
-
 .reevaluation {
   height: calc(100% - 10px);
   border-radius: var(--bs-border-radius);
   background-color: #1c1c1c;
-  margin-top: 10px;
-  padding: 10px;
+  overflow: hidden;
+}
+
+.reeval-header {
+  text-align: center;
+  margin: 10px;
+  height: 50px;
+}
+
+#reevalCategories-scrollcontainer {
+  margin: 10px 5px 10px 15px;
+  height: calc(100% - 80px);
+  overflow-y: scroll;
+}
+
+#reevalCategories-container {
+  margin-right: 5px;
 }
 
 .transaction-body {
@@ -12188,6 +12215,36 @@ body {
   fill: transparent;
 }
 
+.statistics {
+  height: calc(100% - 10px);
+  border-radius: var(--bs-border-radius);
+  background-color: #1c1c1c;
+  overflow: hidden;
+}
+
+#statistics-header {
+  text-align: center;
+  margin: 10px;
+  height: 50px;
+}
+
+#statistics-scrollcontainer {
+  margin: 10px 5px 10px 15px;
+  height: calc(100% - 80px);
+  overflow-y: scroll;
+}
+
+#statistics-container {
+  margin-right: 5px;
+}
+
+.wf {
+  height: calc(100% - 10px);
+  border-radius: var(--bs-border-radius);
+  background-color: #1c1c1c;
+  overflow: hidden;
+}
+
 .dashboard {
   border-radius: var(--bs-border-radius);
   padding: 10px;
@@ -12202,6 +12259,11 @@ body {
 .chart-container {
   position: relative;
   min-width: 0;
+}
+
+.dashboardStatistics {
+  display: flex;
+  flex-direction: column;
 }
 
 .accordion {
@@ -12240,14 +12302,15 @@ body {
 .content {
   position: relative;
   z-index: 10;
-  padding: 5px;
+  padding: 0 5px 5px 5px;
   border-radius: 10px;
   background-color: #1c1c1c;
 }
 
 .category-body {
-  min-height: 35px;
+  min-height: 30px;
   background-color: #1c1c1c;
+  border-radius: 10px;
   display: flex;
   align-items: center;
 }
