--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -20,7 +20,7 @@ $navbar-light-brand-color: white;
 
 // --- Custom Styles ---
 
-body {    
+body {
     color: white;
     overflow: hidden;
 }
@@ -83,10 +83,11 @@ body {
 }
 
 .sidebar-container {
-    margin: 1rem 0 0 0;
+    margin: 70px 0 0 0;    
     width: 200px;
     opacity: 1;
     transition: width ease 0.5s, opacity ease-in 0.5s;
+    z-index: 11;
 }
 
 .sidebar-caret {
@@ -101,7 +102,7 @@ body {
     white-space: nowrap;
 }
 
-.collapsed > .sidebar-container{
+.collapsed > .sidebar-container {
     width: 0;
     opacity: 0;
 }
@@ -113,26 +114,39 @@ body {
 // Action sidebar
 
 #action-sidebar {
-    position: fixed;         
-    left: 0px; 
+    position: fixed;
+    left: 0px;
     top: 50%;
     z-index: 500;
-}
-/*
-#reevaluation-button-container {
-    width: 50px;
-    transition: width ease-in-out 0.5s;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
 }
 
-#reevaluation-button-container:hover {    
-    width: 300px;
+.sidebar-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
 
 #reevaluation-button {
-    margin: auto;
-    display: block;    
+    width: 45px;
+    height: 45px;
 }
-*/
+
+#statistics-button {
+    width: 45px;   
+    height: 45px;   
+}
+
+#wf-button {
+    width: 45px;
+    height: 50px;
+}
 
 // Menu wheel
 #menu-container {
@@ -209,38 +223,51 @@ body {
     height: 40px !important;
 }
 
-// Main Container 
+// Main Container
 
 .main-container {
     padding-top: 57px;
     padding-right: 0;
-    padding-left:25px;
+    padding-left: 25px;
     height: 100vh;
+    width: 100vw;
+}
+
+main {
+    width: 100%;
+    height: 100%;
 }
 
 // Flip Container
 
 .flip-container {
     background-color: transparent;
-    perspective: 1000px;
     margin-top: 10px;
+    height: 100%;
+    width: 100%;
 }
 
 .flip-container-inner {
     position: relative;
+    height: 100%;
+    width: 100%;
     transition: transform 1s;
     transform-style: preserve-3d;
 }
 
 .flip-content {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     height: calc(100vh - 67px);
+    width: 100%;
+    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));
 }
 
 .flip-scroll-container {
-    height: 100%;
+    height: calc(100% - 10px);
     overflow-y: scroll;
 }
 
@@ -249,29 +276,29 @@ body {
     margin-right: 20px;
 }
 
-.flip-content-back {
-    position: absolute;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    top: 0;
-    left: 0;
-    height: calc(100vh - 67px);
-    width: 100%;
-    transform: rotateY(180deg);
-}
-
-.flip {
-    transform: rotateY(180deg);
-}
-
 // Reevaluation
 
 .reevaluation {
     height: calc(100% - 10px);
     border-radius: var(--bs-border-radius);
     background-color: $secondary;
-    margin-top: 10px;
-    padding: 10px,
+    overflow: hidden;
+}
+
+.reeval-header {
+    text-align: center;
+    margin: 10px;
+    height: 50px;
+}
+
+#reevalCategories-scrollcontainer {
+    margin: 10px 5px 10px 15px;
+    height: calc(100% - 80px);
+    overflow-y : scroll;
+}
+
+#reevalCategories-container {
+    margin-right: 5px;
 }
 
 .transaction-body {
@@ -303,7 +330,7 @@ body {
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
 }
 
 .reeval-submit-button {
@@ -314,6 +341,40 @@ body {
 .reeval-submit-svg {
     stroke: white;
     fill: transparent;
+}
+
+// Statistics
+
+.statistics {
+    height: calc(100% - 10px);
+    border-radius: var(--bs-border-radius);
+    background-color: $secondary;
+    overflow: hidden;
+}
+
+#statistics-header {
+        text-align: center;
+        margin: 10px;
+        height: 50px;
+}
+
+#statistics-scrollcontainer {
+    margin: 10px 5px 10px 15px;
+    height: calc(100% - 80px);
+    overflow-y: scroll;
+}
+
+#statistics-container {
+    margin-right: 5px;
+}
+
+// WF
+
+.wf {
+    height: calc(100% - 10px);
+    border-radius: var(--bs-border-radius);
+    background-color: $secondary;
+    overflow: hidden;
 }
 
 // Dashboard
@@ -331,6 +392,11 @@ body {
 .chart-container {
     position: relative;
     min-width: 0;
+}
+
+.dashboardStatistics {
+    display: flex;
+    flex-direction: column;
 }
 
 //Accordion
@@ -357,10 +423,9 @@ body {
 }
 
 .rotate {
-    transform: rotate(180deg);    
+    transform: rotate(180deg);
 }
-
-// Category 
+// Category
 
 .border-container {
     position: relative;
@@ -373,14 +438,15 @@ body {
 .content {
     position: relative;
     z-index: 10;
-    padding: 5px;
+    padding: 0 5px 5px 5px;
     border-radius: 10px;
     background-color: $secondary;
 }
 
-.category-body {    
-    min-height: 35px;
+.category-body {
+    min-height: 30px;
     background-color: $secondary;
+    border-radius: 10px;
     display: flex;
     align-items: center;
 }
@@ -394,7 +460,7 @@ body {
     width: 100%;
     height: 70%;
     opacity: 0;
-    transition: opacity .5s ease-in;    
+    transition: opacity .5s ease-in;
 }
 
 .border-rotate {
@@ -408,7 +474,6 @@ body {
     z-index: 10;
     height: 0.4rem;
 }
-
 // Transaction (Details)
 
 .transaction-date {
@@ -418,10 +483,9 @@ body {
 }
 
 .transaction-value {
-    min-width:80px;
+    min-width: 80px;
     text-align: end;
 }
-
 // Modals
 .form-group {
     margin-top: 10px;
@@ -429,12 +493,12 @@ body {
 
 .modalIcon {
     width: 50px;
-    height: 50px;   
+    height: 50px;
 }
 
 .modalIconNecessity {
     width: 30px;
-    height: 30px;   
+    height: 30px;
 }
 
 .modalIconLabel {
@@ -443,7 +507,7 @@ body {
     height: 50px;
 }
 
-.modalIconContainer  {
+.modalIconContainer {
     width: 100%;
     height: 100%;
     display: flex;
