--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -368,6 +368,19 @@ main {
     margin-right: 5px;
 }
 
+.lineCharts-container {
+    border-radius: var(--bs-border-radius);
+    margin-top: 10px;
+    display: flex;
+}
+
+
+.lineChart-container {
+    width: 50%;
+    padding: 2px;
+    min-height: 200px;
+}
+
 // WF
 
 .wf {
