Feat: Add Service Layer And CategoryStatisticsModel

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -531,12 +531,25 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="lineCharts-container border">
+                        <div class="Charts-container border">
                             <div class="lineChart-container">
                                 <canvas id="sentimentLineChartYear"></canvas>
                             </div>
                             <div class="lineChart-container">
                                 <canvas id="necessityLineChartYear"></canvas>
+                            </div>
+                        </div>
+                        <div class="Charts-container border">  
+                            <div class="overspendingChart-container">
+                                <canvas id="overspendingChart"></canvas> 
+                            </div>
+                        </div>
+                        <div class="Charts-container border">
+                            <div class="lineChart-container">
+                                <canvas id="savingsChart"></canvas>
+                            </div>
+                            <div class="lineChart-container">
+                                <canvas id="incomeChart"></canvas>
                             </div>
                         </div>
                     </div>
