--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -12238,7 +12238,7 @@ main {
   margin-right: 5px;
 }
 
-.lineCharts-container {
+.Charts-container {
   border-radius: var(--bs-border-radius);
   margin-top: 10px;
   display: flex;
@@ -12248,6 +12248,12 @@ main {
   width: 50%;
   padding: 2px;
   min-height: 200px;
+}
+
+.overspendingChart-container {
+  width: 100%;
+  padding: 2px;
+  min-height: 320px;
 }
 
 .wf {
