--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -266,39 +266,74 @@ main {
     transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));
 }
 
-.flip-scroll-container {
+#statistics-scrollcontainer::before, #home-scrollcontainer::before, #reevalCategories-scrollcontainer::before {
+    content: "";
+    left: -5px;
+    display: block;
+    height: 10px;
+    width: calc(100% - 5px);
+    position: absolute;
+    background: linear-gradient(0deg, rgba(2,4,3,0.05), 40%, rgba(2,4,3,1));
+    z-index: 100;
+}
+
+#statistics-scrollcontainer::after, #home-scrollcontainer::after, #reevalCategories-scrollcontainer::after {
+    content: "";
+    bottom: 10px;
+    display: block;
+    height: 15px;
+    width: calc(100% - 25px);
+    position: absolute;
+    background: linear-gradient(180deg, rgba(2,4,3,0.05), rgba(2,4,3,1));
+    z-index: 100;
+}
+
+// Home
+
+#home {
     height: calc(100% - 10px);
+    overflow: hidden;
+}
+
+#home-scrollcontainer {   
+    height: 100%;
     overflow-y: scroll;
 }
 
-.flip-content-container {
-    position: relative;
-    margin-right: 20px;
+#home-container {
+    margin: 10px 5px 10px 0;
 }
 
 // Reevaluation
 
-.reevaluation {
+#reevaluation {
+    position: relative;
     height: calc(100% - 10px);
-    border-radius: var(--bs-border-radius);
-    background-color: $secondary;
     overflow: hidden;
 }
 
-.reeval-header {
+#reevalInfo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 75%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    margin: 10px;
-    height: 50px;
+    margin: 0;
+    padding: 10px;
+    border: groove 2px #d3d3d3;
+    border-radius: var(--bs-border-radius);
+    background-color: $secondary;
 }
 
 #reevalCategories-scrollcontainer {
-    margin: 10px 5px 10px 15px;
-    height: calc(100% - 80px);
-    overflow-y : scroll;
+    margin: 0 5px 0 15px;
+    height: calc(100% - 20px);
+    overflow-y: scroll;
 }
 
 #reevalCategories-container {
-    margin-right: 5px;
+    margin: 10px 5px 10px 0;
 }
 
 .transaction-body {
@@ -347,25 +382,17 @@ main {
 
 .statistics {
     height: calc(100% - 10px);
-    border-radius: var(--bs-border-radius);
-    background-color: $secondary;
     overflow: hidden;
 }
 
-#statistics-header {
-        text-align: center;
-        margin: 10px;
-        height: 50px;
-}
-
 #statistics-scrollcontainer {
-    margin: 10px 5px 10px 15px;
-    height: calc(100% - 80px);
+    margin: 0 5px 0 15px;
+    height: 100%;
     overflow-y: scroll;
 }
 
 #statistics-container {
-    margin-right: 5px;
+    margin: 10px 5px 10px 0;
 }
 
 .Charts-container {
@@ -379,13 +406,16 @@ main {
     width: 50%;
     padding: 2px;
     min-height: 200px;
+    background-color: $secondary;
+    border-radius: var(--bs-border-radius);
 }
 
 .overspendingChart-container {
     width: 100%;
     padding: 2px;
     min-height: 320px;
-    
+    background-color: $secondary;
+    border-radius: var(--bs-border-radius);
 }
 
 // WF
@@ -487,6 +517,17 @@ main {
     background: radial-gradient(circle, rgba(74,1,105,1) 0%, rgba(0,44,255,1) 50%, rgba(163,23,23,1) 100%);
     animation: rotate 4s cubic-bezier(.8, 0, 0.2, 1) infinite;
     opacity: 1;
+}
+
+.overspending-text {
+    display: inline-block;
+    min-width: 180px;
+}
+
+.balance-text{
+    display: inline-block;
+    min-width: 160px;
+    text-align: end;
 }
 
 .progress {
