--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -256,6 +256,7 @@
                             </div>
                         </div>
 
+                        @*
                         <div class="accordion my-2" id="group_3" data-id="3">
                             <div class="accordion-item">
                                 <div id="accordion-head-savings" class="accordion-head d-flex">
@@ -296,6 +297,7 @@
                                 </div>
                             </div>
                         </div>
+                        *@
                     </div>
                 </div>
             </div>
@@ -519,6 +521,8 @@
                             <div class="lineChart-container">
                                 <canvas id="sentimentLineChartYear"></canvas>
                             </div>
+                        </div>
+                        <div class="Charts-container border">
                             <div class="lineChart-container">
                                 <canvas id="necessityLineChartYear"></canvas>
                             </div>
@@ -527,13 +531,10 @@
                             <div class="overspendingChart-container">
                                 <canvas id="overspendingChart"></canvas>
                             </div>
-                        </div>
+                        </div>                        
                         <div class="Charts-container border">
                             <div class="lineChart-container">
-                                <canvas id="savingsChart"></canvas>
-                            </div>
-                            <div class="lineChart-container">
-                                <canvas id="incomeChart"></canvas>
+                                <canvas id="totalSpentChart"></canvas>
                             </div>
                         </div>
                     </div>
